--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,14 @@
     android:orientation="vertical"
     android:background="#FFFFFF">
 
-    <TextView
-        android:id="@+id/textBonjour"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bonjour d'abord"
-        android:textSize="24sp"
-        android:textColor="#000000"
-        android:layout_margin="16dp"/>
+    <ImageView
+        android:id="@+id/imageBonjour"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/lado_logo"
+        android:contentDescription="Cliquez pour continuer"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:focusable="true" />
+
 </LinearLayout>
