--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,6 @@
     android:orientation="vertical"
     android:background="#FFFFFF">
 
-    <!-- Partie centrale -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -14,16 +13,14 @@
         android:gravity="center">
 
         <TextView
-            android:id="@+id/textWelcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bienvenue dans la page d'accueil 🎉"
+            android:text="👤 Page Profil"
             android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="#14213D" />
     </LinearLayout>
 
-    <!-- ✅ Barre de navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
