--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/nav_historique"
-        android:icon="@drawable/ic_databackup_50"
+        android:icon="@drawable/ic_home_48"
         android:title="Home" />
 
     <item
