--- a/app/src/main/res/layout/activity_verify_user.xml
+++ b/app/src/main/res/layout/activity_verify_user.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:padding="28dp"
-    android:background="#FFD966">
+    android:background="#ffc40c">
 
     <!-- 🔹 Logo -->
     <ImageView
